Update index file

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum illum
       sequi nulla perspiciatis aliquam aperiam. Deserunt culpa iusto totam vero.
     </h1>
+    <h1>Hello mu name is ____</h1>
   </body>
 </html>
